@@ -45,21 +45,31 @@ Use the commands below to install exiftool
 **Unverified folder at Destination:** ```/DestinationDirectory/Unverified```  
 **Log file at Destination:** ```/DestinationDirectory/rEXIFier-YYYYMMDD.log```  
 
-### Step 2. Search media files (i.e. jpg, jpeg, mp4, mpg and mov) in Source Directory
+### Step 2. Search media files (i.e. jpg, jpeg, mp4, mpg and mov) in Source Directory, include subfolders (3 levels deep) if Crawl is enabled.  
+```Note! Hidden files and folders (prefixed with '.') are excluded from the search scope. Example: /my-location/.my-hidden-image.jpg```
 **/SourceDirectory/**  
+├── subfolder01/  
+│   └── file13.mov  
+├── subfolder02/  
+│   └── file23.mov  
 ├── file01.jpg  
 ├── file02.jpeg  
 ├── file03.mov  
 ├── file04.jpeg  
 └── file05.mov
 
-### Step 3. Move/copy the found files to temporary Work-In-Progress (WIP) directory
+### Step 3. Move/copy the found files to temporary Work-In-Progress (WIP) directory in subfolders with names matching the Source's name and it's subfolders
 **/SourceDirectory/WIP-YYYYMMDD-HHmmss/**  
-├── file01.jpg  
-├── file02.jpeg  
-├── file03.mov  
-├── file04.jpeg  
-└── file05.mov
+├── subfolder01/  
+│   └── file13.mov  
+├── subfolder02/  
+│   └── file23.mov  
+└── SourceDirectoryName/  
+    ├── file01.jpg  
+    ├── file02.jpeg  
+    ├── file03.mov  
+    ├── file04.jpeg  
+    └── file05.mov
 
 ### Step 4. Create directories at Destination location
 **/DestinationDirectory/Duplicates**  
@@ -74,7 +84,7 @@ Use the commands below to install exiftool
 **/DestinationDirectory/rEXIFier-<YYYYMMDD>.log**
 
 ### Step 6. Prepare and move the WIP files to Destination location with the chosen folder structure
-**Destination files sorted by options**  
+**Destination files sort-by options:**  
 &nbsp;&nbsp;--YMD = /YEAR/MONTH/DAY/picture.jpg, i.e. /DestinationDirectory/2021/05/10/picture.jpg  
 &nbsp;&nbsp;--YM = /YEAR/MONTH/picture.jpg, i.e. /DestinationDirectory/2021/05/picture.jpg  
 &nbsp;&nbsp;--Y (default) = /YEAR, i.e. /DestinationDirectory/2021/picture.jpg
@@ -98,10 +108,18 @@ An example with YM (/YEAR/MONTH/) folder structure
 │   └── my_image-UVRFD001.jpg  
 └── rEXIFier-20210513.log
 
+### Step 7. WIP directory cleanup
+**WIP subfolder removal:** deleting all empty subfolders location in Work-In-Progress directory if Crawl is enabled  
+**WIP folder removal:** deleting empty Work-In-Progress directory  
+
+### Step 8. Ending of programme
+**Pre-exit maintenance:** reverting global parameters and variables back to the original state, like Internal Field Separator (IFS)  
+**Logging and exiting:** writing the processing results (state) to the log file and exiting  
+
 ## Help menu
 **Help:** for more parameters use '/bin/bash rEXIFier.sh <-h|--help>'
 
-**Usage:** '/bin/bash rEXIFier.sh <source-path|.> <destination-path|.> <--Ext|--EXT|--ext> <--FSAttribute|--NoFSAttribute> <--YMD|--YM|--Y|--NOSORT> <--copy|--move>  <--timerON|--timerOFF>  
+**Usage:** '/bin/bash rEXIFier.sh <source-path|.> <destination-path|.> <--Ext|--EXT|--ext> <--FSAttribute|--NoFSAttribute> <--YMD|--YM|--Y|--NOSORT> <--copy|--move>  <--timerON|--timerOFF> <--crawlON|--crawlOFF>  
 &nbsp;&nbsp;Mandatory parameters: **source-path**, **destination-path**
 
 **Source** absolute path is required with leading '/'. Alternatively use '.' for current directory.  
@@ -119,7 +137,7 @@ An example with YM (/YEAR/MONTH/) folder structure
 &nbsp;&nbsp;--FSAttribute, can cause conflicts and affect file sorting  
 &nbsp;&nbsp;--NoFSAttribute (default) is the recommended option  
 
-**Destination files sorted by:**  
+**Destination files sort-by options:**  
 &nbsp;&nbsp;--YMD = YEAR/MONTH/DAY/picture.jpg, i.e. /2021/05/10/picture.jpg  
 &nbsp;&nbsp;--YM = YEAR/MONTH/picture.jpg, i.e. /2021/05/picture.jpg  
 &nbsp;&nbsp;--Y (default) = YEAR, i.e. /2021/picture.jpg  
@@ -133,19 +151,23 @@ An example with YM (/YEAR/MONTH/) folder structure
 &nbsp;&nbsp;--timerON = display and log operation timings  
 &nbsp;&nbsp;--timerOFF = do not display and log operation timings (default)
 
+**Crawl parameters:**  
+&nbsp;&nbsp;--crawlON = process Source and its subfolders 3 levels deep (default)  
+&nbsp;&nbsp;--crawlOFF = process Source directory only, i.e. Source files at root with no subfolders
+
 ## Usage and examples
-The command below will **move** files from "upload" at Source Media Location to Destination Media Location keeping all files under "archive" with sorting by Year. File renaming will be done using EXIF metadata only. File extension case will be changed to lowercase:  
+The command below will search for files at Source Media Location including subfolders (3 levels deep) and **move** files from "upload" to Destination Media Location keeping all files under "archive" with sorting by Year. File renaming will be done using EXIF metadata only. File extension case will be changed to lowercase:  
 ```/bin/bash /Script-Location/rEXIFier.sh /Source-Media-Location/upload/ /Destination-Media-Location/archive/```  
 &nbsp;&nbsp;It would be equivalent to the command below:  
-```/bin/bash /Script-Location/rEXIFier.sh /Source-Media-Location/upload/ /Destination-Media-Location/archive/ --ext --NoFSAttribute --Y --move --timerOFF```  
+```/bin/bash /Script-Location/rEXIFier.sh /Source-Media-Location/upload/ /Destination-Media-Location/archive/ --ext --NoFSAttribute --Y --move --timerOFF --crawlON```  
 
-The command below will **copy** files from "upload" at Source Media Location to Destination Media Location keeping all files under "archive" with no sorting by Year or Month or Day. File renaming will be done using EXIF metadata only. File extension case will be UnChanged:  
-```/bin/bash /Script-Location/rEXIFier.sh /Source-Media-Location/upload/ /Destination-Media-Location/archive/ --ExT --NoFSAttribute --DST --copy```  
+The command below will search for files in the root of Source Media Location only, i.e. no subfolders, and **copy** files from "upload" to Destination Media Location keeping all files under "archive" with no sorting by Year or Month or Day. File renaming will be done using EXIF metadata only. File extension case will be UnChanged:  
+```/bin/bash /Script-Location/rEXIFier.sh /Source-Media-Location/upload/ /Destination-Media-Location/archive/ --ExT --NoFSAttribute --NOSORT --copy --crawlOFF```  
 
-The command below will **copy** files from "upload" at Source Media Location to Destination Media Location keeping all files under "archive" with sorting by Year and Month. File renaming will be done using EXIF metadata and File System attributes. File extension case will be changed to UPPERCASE:  
-```/bin/bash /Script-Location/rEXIFier.sh /Source-Media-Location/upload/ /Destination-Media-Location/archive/ --EXT --YM --copy --FSAttribute```  
+The command below will search for files in the root of Source Media Location only, i.e. no subfolders, and **copy** files from "upload" to Destination Media Location keeping all files under "archive" with sorting by Year and Month. File renaming will be done using EXIF metadata and File System attributes. File extension case will be changed to UPPERCASE:  
+```/bin/bash /Script-Location/rEXIFier.sh /Source-Media-Location/upload/ /Destination-Media-Location/archive/ --EXT --YM --copy --FSAttribute --crawlOFF```  
 
-The command below will **move** files from "upload" at Source Media Location to Destination Media Location keeping all files under "archive/all" with no file sorting, i.e. the result will be a pile of deduplicated files in the "all" folder. File renaming will be done using EXIF metadata only. File extension case will be changed to lowercase:  
+The command below will search for files at Source Media Location including subfolders (3 levels deep) and **move** files from "upload" to Destination Media Location keeping all files under "archive/all" with no file sorting, i.e. the result will be a pile of deduplicated files in the "all" folder. File renaming will be done using EXIF metadata only. File extension case will be changed to lowercase:  
 ```/bin/bash /Script-Location/rEXIFier.sh /Source-Media-Location/upload/ /Destination-Media-Location/archive/ --NOSORT```  
 &nbsp;&nbsp;It would be equivalent to the command below:  
 ```/bin/bash /Script-Location/rEXIFier.sh /Source-Media-Location/upload/ /Destination-Media-Location/archive/ --ext --NoFSAttribute --NOSORT --move --timerOFF```  
@@ -153,9 +175,10 @@ The command below will **move** files from "upload" at Source Media Location to 
 ## Use cases
 ### Automated file processing with an out-of-support (EOL) NAS QNAP TS-210 or TS-212
 #### Preamble
-Let's assume there is a NAS QNAP TS-210 where all the media files are kept. Being a Linux-based platform, we want to utilise its capabilities to process files in an automated way.
+Let's assume there is a NAS QNAP TS-210 where all the media files are stored. There are two main folders: "Media Upload" and "Media Archive", however the media files can be scattered around.  
+Since QNAP NAS is a Linux-based platform, we want to utilise its capabilities to process files in an automated way, i.e. once the media files are uploaded by a user or other process to the "Media Upload" folder, an automated processor will move the files to the "Media Archive" folder and sort them out to the appropriate subfolders. We also want to utilise the processor to run occasional jobs manually against some other locations with media files.  
 QNAP used to officially support Optware (ipkg) and other 3rd-party package managers via the App Center, however they stopped it sometime in 2016.
-On top of limited 3rd-party package manager support, QNAP TS-210/TS-212 is out of support as of 27 March 2021.
+On top of limited 3rd-party package manager support, QNAP TS-210/TS-212 is out of support as of 27 March 2021.  
 The tutorial below describes how to prepare QNAP TS-210 to run the script in an automated way via task scheduler.
 
 #### QNAP TS-210 prerequisites
@@ -188,7 +211,7 @@ Once NAS is restarted, log in to CLI via SSH, "opkg" command should be available
 # opkg install bash
 ```
 ##### Step 7. Script deployment  
-**Create directory (do not use /opt):** ```# mkdir /apps && cd /apps```  
+**Create directory (do not use /opt, it is reserved for package managers and other QNAP-specific stuff):** ```# mkdir /apps && cd /apps```  
 **Download the script:** ```# wget https://github.com/ivang-coder/rexifier/archive/refs/heads/master.zip --no-check-certificate```  
 **Unpack the archive:** ```# unzip master.zip && mv rexifier-master/ rexifier```  
 **Change permissions:** ```# chmod +x /apps/rexifier/rEXIFier.sh```  
